# Observatory-Booking

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: code-quality.yml  static.yml
app/: __main__.py  app.py  booking_system.py  data_transfer_objects.py  database_setup.py  filters.py  models.py  utils.py
app/assets/css/: tailwind.css
app/routes/: __init__.py  admin_dashboard.py  authentication.py  blueprint.py  core_views.py  error_handlers.py  security_decorators.py  static_pages.py  user_actions.py
app/services/: __init__.py  admin_service.py  booking_service.py  user_service.py  weather_service.py
app/static/css/: base.css  index.css  main.css
app/static/js/: base.js  load_theme.js
app/templates/: base.html  index.html
app/templates/Admin/: admin.html
app/templates/Authentication/: login.html  register.html
app/templates/Components/: _theme_toggle_button.html
app/templates/User/: change_password.html  events.html
app/templates/error_pages/: 403.html  404.html  500.html
app/templates/static_pages/: contact.html  cookie_policy.html  faq.html  privacy_policy.html  (+1 more)
docs/: Makefile  architecture.rst  conf.py  endpoints.rst  index.rst  installation.rst  introduction.rst  make.bat  requirements-docs.txt  usage.rst
docs/components/: app.rst  booking_system.rst  data_transfer_objects.rst  database_setup.rst  utils.rst
docs/specs/: openapi.yaml
(+89 files in other folders)
